--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules src/server.ts",
+    "dev": "ts-node-dev -r dotenv/config --inspect --transpile-only --ignore-watch node_modules src/server.ts",
     "build": "tsc",
     "docker-up": "docker-compose up --build -d",
     "docker-down": "docker-compose down"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mysql2": "^3.9.9",
     "reflect-metadata": "^0.2.2",
