--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev -r dotenv/config --inspect --transpile-only --ignore-watch node_modules src/server.ts",
+    "dev": "ts-node-dev -r dotenv/config --inspect --transpile-only --ignore-watch node_modules src/main.ts",
     "build": "tsc",
     "docker-up": "docker-compose up --build -d",
     "docker-down": "docker-compose down"
