--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "docker-down": "docker-compose down"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mysql2": "^3.9.9",
