add port to env

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,6 @@
 MYSQL_ROOT_PASSWORD=
 MYSQL_DATABASE=
 MYSQL_USER=
-MYSQL_PASSWORD=
 MYSQL_HOST=
 MYSQL_PORT=
 
@@ -11,3 +10,5 @@ ORDER_ID_API_KEY=
 LAMEN_IMAGE_URL=
 
 API_KEY=
+
+PORT=
