--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "ts-node -r dotenv/config --transpile-only dist/main.js",
     "build": "tsc",
     "docker-up": "docker-compose up --build -d",
-    "docker-down": "docker-compose down"
+    "docker-down": "docker-compose down",
+    "test": "jest --watchAll --collectCoverage"
   },
   "dependencies": {
     "axios": "^1.7.2",
